添加隐藏static和final访问符的选框

--- a/src/main/java/com/zhangbyby/bfc/ui/BFCMainUI.form
+++ b/src/main/java/com/zhangbyby/bfc/ui/BFCMainUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.zhangbyby.bfc.ui.BFCMainUI">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="800" height="600"/>
@@ -25,6 +25,7 @@
               </grid>
             </constraints>
             <properties>
+              <editable value="false"/>
               <toolTipText value="SourceClassQualifiedName"/>
             </properties>
           </component>
@@ -70,7 +71,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+            </properties>
           </component>
           <component id="75492" class="javax.swing.JButton" binding="targetClassChooseButton" custom-create="true">
             <constraints>
@@ -85,7 +88,7 @@
       <grid id="a0cf7" binding="comparePanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -116,6 +119,36 @@
               </component>
             </children>
           </scrollpane>
+        </children>
+      </grid>
+      <grid id="e99e7" binding="filterMenuPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="a70b5" class="javax.swing.JCheckBox" binding="hideStatic">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="95" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="隐藏static"/>
+            </properties>
+          </component>
+          <component id="6ef59" class="javax.swing.JCheckBox" binding="hideFinal">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="95" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="隐藏final"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
