支持对比属性（按照getter/setter）

--- a/src/main/java/com/zhangbyby/bfc/ui/BFCMainUI.form
+++ b/src/main/java/com/zhangbyby/bfc/ui/BFCMainUI.form
@@ -93,27 +93,27 @@
         <properties/>
         <border type="none"/>
         <children>
-          <scrollpane id="7ad3a" binding="sourceClassFieldsPanel">
+          <scrollpane id="7ad3a" binding="sourceClassElementsPanel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="5d3a3" class="javax.swing.JList" binding="sourceFields" custom-create="true">
+              <component id="5d3a3" class="javax.swing.JList" binding="sourceElements" custom-create="true">
                 <constraints/>
                 <properties/>
               </component>
             </children>
           </scrollpane>
-          <scrollpane id="a3954" binding="targetClassFieldsPanel">
+          <scrollpane id="a3954" binding="targetClassElementsPanel">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="223c8" class="javax.swing.JList" binding="targetFields" custom-create="true">
+              <component id="223c8" class="javax.swing.JList" binding="targetElements" custom-create="true">
                 <constraints/>
                 <properties/>
               </component>
@@ -121,7 +121,7 @@
           </scrollpane>
         </children>
       </grid>
-      <grid id="e99e7" binding="filterMenuPanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e99e7" binding="filterMenuPanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -155,6 +155,15 @@
             </constraints>
             <properties>
               <text value="自动隐藏"/>
+            </properties>
+          </component>
+          <component id="987a6" class="javax.swing.JCheckBox" binding="disPropertyGroup">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <selected value="false"/>
+              <text value="只显示字段"/>
             </properties>
           </component>
         </children>
